--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,16 @@
 {
-  "extends": "@react-native/typescript-config/tsconfig.json"
+  "extends": "@react-native/typescript-config/tsconfig.json",
+  "compilerOptions": {
+    /* Completeness */
+    "skipLibCheck": true,
+    /* Skip type checking all .d.ts files. */
+
+    /* 配置基础地址 */
+    "baseUrl": ".",
+    "paths": {
+      "@components/*" : ["src/components/*"],
+      "@entry/*": ["src/entry/*"],
+      "@utils/*": ["src/utils/*"]
+    }
+  }
 }
