--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-reanimated": "^3.8.1",
     "react-native-svg": "^15.1.0"
   },
   "devDependencies": {
